--- a/doyouagree/en.lproj/MainStoryboard.storyboard
+++ b/doyouagree/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,185 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Dya View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="dyaViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMH-Zt-wKy">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="192" id="58f-OD-Rn0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="2" id="0mm-W0-o5K"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Enter Code" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIi-Nc-YRg">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejZ-DS-Uqv">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Enter">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="inp-wL-rrB" kind="modal" modalTransitionStyle="flipHorizontal" id="aNI-Z4-KOJ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Not Logged in" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqG-Is-eVM">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kIi-Nc-YRg" firstAttribute="top" secondItem="3" secondAttribute="top" constant="134" id="9Qt-fm-sP7"/>
+                            <constraint firstItem="ejZ-DS-Uqv" firstAttribute="top" secondItem="DMH-Zt-wKy" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Cy4-hg-y19"/>
+                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="centerX" secondItem="ejZ-DS-Uqv" secondAttribute="centerX" type="default" id="H0B-1o-jQV"/>
+                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="51" id="JAg-aE-cbG"/>
+                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="centerX" secondItem="kIi-Nc-YRg" secondAttribute="centerX" type="default" id="Y8a-qe-wL3"/>
+                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="top" secondItem="kIi-Nc-YRg" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="jdV-Fn-wjZ"/>
+                            <constraint firstItem="hqG-Is-eVM" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="pRh-gN-sPu"/>
+                            <constraint firstItem="hqG-Is-eVM" firstAttribute="top" secondItem="3" secondAttribute="top" constant="53" id="wle-Nd-2Ci"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="codeField" destination="DMH-Zt-wKy" id="zFd-LG-lgV"/>
+                        <outlet property="fbUserLabel" destination="hqG-Is-eVM" id="Mgh-cS-JnW"/>
+                        <outlet property="okButton" destination="ejZ-DS-Uqv" id="wyw-Y2-JHL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="89" y="90"/>
+        </scene>
+        <!--Dya Web View-->
+        <scene sceneID="kjD-aE-7RD">
+            <objects>
+                <viewController id="inp-wL-rrB" customClass="dyaWebView" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ktQ-s0-ngJ">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nN2-Ag-WqT">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="1uU-Qb-1jP">
+                                <connections>
+                                    <action selector="sliderValue:" destination="inp-wL-rrB" eventType="valueChanged" id="a70-WN-kMM"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Disagree" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2n-8n-50B">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Agree" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02U-uM-TxE">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="50%" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IxN-Sk-X3p">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLy-IA-YAN">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Ok">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="okButton:" destination="inp-wL-rrB" eventType="touchUpInside" id="hOu-5b-43R"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dT3-uM-3e0">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="&lt;">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="2" kind="modal" modalTransitionStyle="flipHorizontal" id="r2Z-2u-nAo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dT3-uM-3e0" firstAttribute="top" secondItem="V2n-8n-50B" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="0yJ-Dw-NrD"/>
+                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="trailing" secondItem="ktQ-s0-ngJ" secondAttribute="trailing" type="default" id="1Lb-ui-F0K"/>
+                            <constraint firstItem="IxN-Sk-X3p" firstAttribute="centerX" secondItem="1uU-Qb-1jP" secondAttribute="centerX" type="default" id="2C4-be-eSH"/>
+                            <constraint firstItem="dT3-uM-3e0" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" type="default" id="3Bd-X6-ZCp"/>
+                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" type="default" id="7Rf-Yx-lxu"/>
+                            <constraint firstAttribute="bottom" secondItem="RLy-IA-YAN" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="HW5-ox-UY9"/>
+                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="top" secondItem="ktQ-s0-ngJ" secondAttribute="top" type="default" id="Ilo-Sq-qUn"/>
+                            <constraint firstItem="02U-uM-TxE" firstAttribute="baseline" secondItem="IxN-Sk-X3p" secondAttribute="baseline" type="default" id="LNg-Qz-iXX"/>
+                            <constraint firstItem="V2n-8n-50B" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="O8W-E1-par"/>
+                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="top" secondItem="nN2-Ag-WqT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="WDE-Eg-jr2"/>
+                            <constraint firstAttribute="trailing" secondItem="02U-uM-TxE" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="agJ-iT-wiv"/>
+                            <constraint firstItem="V2n-8n-50B" firstAttribute="baseline" secondItem="IxN-Sk-X3p" secondAttribute="baseline" type="default" id="cpi-xa-Jmv"/>
+                            <constraint firstAttribute="bottom" secondItem="dT3-uM-3e0" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="hXh-IM-TVF"/>
+                            <constraint firstAttribute="trailing" secondItem="1uU-Qb-1jP" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="sCQ-L9-D78"/>
+                            <constraint firstItem="RLy-IA-YAN" firstAttribute="centerX" secondItem="IxN-Sk-X3p" secondAttribute="centerX" type="default" id="tQy-f7-2eP"/>
+                            <constraint firstItem="V2n-8n-50B" firstAttribute="top" secondItem="1uU-Qb-1jP" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="v38-ft-8vT"/>
+                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="yey-an-EgE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="valueLabel" destination="IxN-Sk-X3p" id="o3k-f2-GTL"/>
+                        <outlet property="webView" destination="nN2-Ag-WqT" id="nkz-wX-Ljo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pJV-MV-Hmj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="637" y="90"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="dyaViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/dyaViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="codeField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="fbUserLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fbUserName" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="okButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="dyaWebView" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/dyaWebView.h"/>
+            <relationships>
+                <relationship kind="action" name="okButton:" candidateClass="UIButton"/>
+                <relationship kind="action" name="sliderValue:" candidateClass="UISlider"/>
+                <relationship kind="outlet" name="valueLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
