--- a/doyouagree/en.lproj/MainStoryboard.storyboard
+++ b/doyouagree/en.lproj/MainStoryboard.storyboard
@@ -9,7 +9,7 @@
             <objects>
                 <viewController id="2" customClass="dyaViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMH-Zt-wKy">
@@ -77,16 +77,19 @@
             <objects>
                 <viewController id="inp-wL-rrB" customClass="dyaWebView" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ktQ-s0-ngJ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nN2-Ag-WqT">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="418" id="tDg-an-9Ez"/>
+                                    <constraint firstAttribute="height" constant="339" id="DEf-cc-95K"/>
                                 </constraints>
                             </webView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="1uU-Qb-1jP">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="Z82-mr-eFK"/>
+                                </constraints>
                                 <color key="minimumTrackTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="maximumTrackTintColor" red="0.99995561079999995" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="thumbTintColor" white="0.75712819343065696" alpha="1" colorSpace="calibratedWhite"/>
@@ -100,9 +103,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLy-IA-YAN">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="41" id="1Qv-X9-fwE"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Agree">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -151,22 +151,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="IxN-Sk-X3p" firstAttribute="top" secondItem="1uU-Qb-1jP" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="04P-be-fS5"/>
                             <constraint firstItem="nN2-Ag-WqT" firstAttribute="trailing" secondItem="ktQ-s0-ngJ" secondAttribute="trailing" type="default" id="1Lb-ui-F0K"/>
-                            <constraint firstItem="IxN-Sk-X3p" firstAttribute="top" secondItem="1uU-Qb-1jP" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="1kC-d8-5dX"/>
-                            <constraint firstItem="RLy-IA-YAN" firstAttribute="bottom" secondItem="ZZj-5s-uGX" secondAttribute="bottom" type="default" id="4OQ-n2-uxW"/>
                             <constraint firstItem="dT3-uM-3e0" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="6qY-Xi-QJL"/>
                             <constraint firstItem="nN2-Ag-WqT" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" type="default" id="7Rf-Yx-lxu"/>
-                            <constraint firstItem="ZZj-5s-uGX" firstAttribute="top" secondItem="dT3-uM-3e0" secondAttribute="top" type="default" id="9oh-88-GEc"/>
+                            <constraint firstItem="ZZj-5s-uGX" firstAttribute="top" secondItem="dT3-uM-3e0" secondAttribute="top" type="default" id="7Wf-4F-UWv"/>
                             <constraint firstItem="nN2-Ag-WqT" firstAttribute="top" secondItem="ktQ-s0-ngJ" secondAttribute="top" type="default" id="Ilo-Sq-qUn"/>
+                            <constraint firstItem="IxN-Sk-X3p" firstAttribute="centerX" secondItem="1uU-Qb-1jP" secondAttribute="centerX" type="default" id="Jww-zx-eRe"/>
+                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="top" secondItem="nN2-Ag-WqT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="M3v-8O-Igo"/>
                             <constraint firstItem="ZZj-5s-uGX" firstAttribute="leading" secondItem="dT3-uM-3e0" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="MSJ-ek-q19"/>
-                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="top" secondItem="nN2-Ag-WqT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="WDE-Eg-jr2"/>
-                            <constraint firstAttribute="bottom" secondItem="ZZj-5s-uGX" secondAttribute="bottom" constant="13" id="erM-34-Tar"/>
-                            <constraint firstItem="IxN-Sk-X3p" firstAttribute="centerX" secondItem="1uU-Qb-1jP" secondAttribute="centerX" type="default" id="fHY-9R-j2B"/>
-                            <constraint firstItem="RLy-IA-YAN" firstAttribute="centerY" secondItem="ZZj-5s-uGX" secondAttribute="centerY" type="default" id="haT-BD-Uwz"/>
+                            <constraint firstItem="ZZj-5s-uGX" firstAttribute="bottom" secondItem="dT3-uM-3e0" secondAttribute="bottom" type="default" id="NAH-fl-k42"/>
+                            <constraint firstItem="ZZj-5s-uGX" firstAttribute="bottom" secondItem="RLy-IA-YAN" secondAttribute="bottom" type="default" id="RJ5-60-FV2"/>
+                            <constraint firstItem="ZZj-5s-uGX" firstAttribute="top" secondItem="RLy-IA-YAN" secondAttribute="top" type="default" id="ZzT-oo-fwW"/>
+                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="30" id="cDj-eb-Lbj"/>
                             <constraint firstItem="RLy-IA-YAN" firstAttribute="leading" secondItem="ZZj-5s-uGX" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="qDk-ux-gxR"/>
-                            <constraint firstAttribute="trailing" secondItem="1uU-Qb-1jP" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="sCQ-L9-D78"/>
                             <constraint firstAttribute="trailing" secondItem="RLy-IA-YAN" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ufU-z0-Odo"/>
-                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="yey-an-EgE"/>
+                            <constraint firstAttribute="bottom" secondItem="dT3-uM-3e0" secondAttribute="bottom" constant="14" id="wmv-8f-p0Z"/>
                         </constraints>
                     </view>
                     <connections>
@@ -213,6 +213,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
